[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/HiLo-Deco.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Menu/NiceButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/StorySelect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/CharacterSelect.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="OuterContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="OuterContainer"]
margin_right = 720.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Terratrum"
align = 1

[node name="HSeparator" type="HSeparator" parent="OuterContainer"]
margin_top = 89.0
margin_right = 720.0
margin_bottom = 113.0
theme = ExtResource( 2 )

[node name="Contents" type="CenterContainer" parent="OuterContainer"]
margin_top = 117.0
margin_right = 720.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="OuterContainer/Contents"]
margin_left = 227.0
margin_top = 52.0
margin_right = 493.0
margin_bottom = 390.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryMode" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
margin_right = 266.0
text = "Story Mode"

[node name="StandardMode" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
margin_top = 57.0
margin_right = 266.0
margin_bottom = 110.0
text = "Standard Mode"

[node name="TimeAttack" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
visible = false
margin_top = 114.0
margin_right = 266.0
margin_bottom = 167.0
text = "Time Attack"

[node name="SpecialDigs" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
margin_top = 114.0
margin_right = 266.0
margin_bottom = 167.0
text = "Special Digs"

[node name="TerraGarden" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
margin_top = 171.0
margin_right = 266.0
margin_bottom = 224.0
text = "Terra Garden"

[node name="Options" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
margin_top = 228.0
margin_right = 266.0
margin_bottom = 281.0
text = "Options"

[node name="QuickPlay" parent="OuterContainer/Contents/Buttons" instance=ExtResource( 5 )]
modulate = Color( 0.870588, 0.772549, 0.141176, 1 )
margin_top = 285.0
margin_right = 266.0
margin_bottom = 338.0
text = "Quick Play"

[node name="StorySelect" parent="OuterContainer/Contents" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 293.0
margin_top = 195.0
margin_right = 426.0
margin_bottom = 248.0

[node name="CharacterSelect" parent="OuterContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 459.0
margin_right = 720.0
margin_bottom = 1012.0

[node name="TextBGDivider" type="HSeparator" parent="OuterContainer"]
margin_top = 564.0
margin_right = 720.0
margin_bottom = 1007.0
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBGContainer" type="MarginContainer" parent="OuterContainer"]
margin_top = 1011.0
margin_right = 720.0
margin_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="OuterContainer/TextBGContainer"]
margin_right = 720.0
margin_bottom = 69.0
color = Color( 0, 0, 0, 0.705882 )

[node name="TextContainer" type="MarginContainer" parent="OuterContainer/TextBGContainer"]
margin_right = 720.0
margin_bottom = 69.0
custom_constants/margin_right = 32
custom_constants/margin_top = 8
custom_constants/margin_left = 32
custom_constants/margin_bottom = 8

[node name="InfoLabel" type="Label" parent="OuterContainer/TextBGContainer/TextContainer"]
margin_left = 32.0
margin_top = 8.0
margin_right = 688.0
margin_bottom = 61.0
theme = ExtResource( 2 )
text = "Hey! Welcome aboard!"
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="OuterContainer/Contents/Buttons/StoryMode" to="." method="_on_StoryMode_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/StoryMode" to="." method="_on_StoryMode_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/StoryMode" to="." method="_on_StoryMode_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/StandardMode" to="." method="_on_StandardMode_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/StandardMode" to="." method="_on_StandardMode_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/StandardMode" to="." method="_on_StandardMode_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/TimeAttack" to="." method="_on_TimeAttack_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/TimeAttack" to="." method="_on_TimeAttack_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/TimeAttack" to="." method="_on_TimeAttack_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/SpecialDigs" to="." method="_on_SpecialDigs_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/SpecialDigs" to="." method="_on_SpecialDigs_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/SpecialDigs" to="." method="_on_SpecialDigs_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/TerraGarden" to="." method="_on_TerraGarden_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/TerraGarden" to="." method="_on_TerraGarden_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/TerraGarden" to="." method="_on_TerraGarden_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/Options" to="." method="_on_Options_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/Options" to="." method="_on_Options_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="button_down" from="OuterContainer/Contents/Buttons/QuickPlay" to="." method="_on_QuickPlay_hover"]
[connection signal="mouse_entered" from="OuterContainer/Contents/Buttons/QuickPlay" to="." method="_on_QuickPlay_hover"]
[connection signal="pressed" from="OuterContainer/Contents/Buttons/QuickPlay" to="." method="_on_QuickPlay_pressed"]
[connection signal="back_to_main" from="OuterContainer/Contents/StorySelect" to="." method="_on_StorySelect_back_to_main"]
[connection signal="level_selected" from="OuterContainer/Contents/StorySelect" to="." method="_on_StorySelect_level_selected"]
[connection signal="back_from_char_select" from="OuterContainer/CharacterSelect" to="." method="_on_back_from_char_select"]
[connection signal="character_selected" from="OuterContainer/CharacterSelect" to="." method="_on_character_selected"]
